# koffe

./: .dockerignore  .env.example  CLAUDE.md  Dockerfile  alembic.ini  minimal_app.py  nixpacks.toml  package.json  pyproject.toml  railway.toml  render.yaml  requirements.txt  start.py  start.sh
.claude/: settings.local.json
alembic/: env.py
alembic/versions/: 0001_add_brew_methods.py  0002_add_tasting_notes.py
koffe/api/: main.py
koffe/api/routes/: admin.py  chat.py  coffees.py  feedback.py  image_proxy.py  roasters.py
koffe/db/: database.py  models.py  seed_data.py
koffe/frontend/static/: style.css
koffe/frontend/templates/: base.html  coffee_cards.html  coffee_detail.html  compare_detail.html  compare_search.html  compare_table.html  explore_ia.html  index.html  landing.html
koffe/scrapers/: base.py  runner.py  utils.py  vision.py
koffe/scrapers/sites/: cafe_z.py  cuervo_cafe.py  flat_and_white.py  flat_n_white.py  fuego_tostadores.py  grains_ar.py  mendel_tostadores.py  puerto_blest.py  sample_roaster.py
mendels data/: mendel_coffees.txt  universal_link.txt
scripts/: cleanup_db.py  fix_json_encoding.py  fix_names.py  fix_tasting_notes.py  push_coffees.py  scrape_now.py  seed_db.py  set_altura1_notes.py  update_intensities.py
